footer - 2 links to buttons, re-arrange

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -70,6 +70,7 @@
 @import 'components/misc/page';
 @import 'components/misc/rich-text';
 @import 'components/misc/wrapper';
+@import 'components/button';
 
 // -- Search page and components
 @import 'components/search/search-box';
