--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -22,16 +22,17 @@
 			class="footer-section__social-link news"
 			href="/news"
 			title="CCA Libraries' news"
-		>Libraries' News</a>
-		<a
-			class="footer-section__social-link koha"
-			href="/news"
-			title="CCA Libraries' news"
-		>Sign into your library account</a>
+		>Libraries' news</a>
 		<a
 			class="footer-section__social-link newsletter"
 			href="/news"
 			title="CCA Libraries' news"
 		>Check out our newsletter</a>
+		<a
+			class="footer-section__social-link koha button"
+			href="/news"
+			title="CCA Libraries' news"
+		>Sign into your library account</a>
+
 	</div>
 </li>
