--- a/libraries/libraries/templates/components/footer/footer-links.html
+++ b/libraries/libraries/templates/components/footer/footer-links.html
@@ -5,7 +5,7 @@
 		Helpful links
 	</h4>
 
-	<a href="{% slugurl 'ask-us' %}" title="Ask a librarian for assistance" class="footer-section__link">
+	<a href="{% slugurl 'ask-a-librarian' %}" title="Ask a librarian for assistance" class="footer-section__link button">
 		Ask a Question
 	</a>
 
