footer - 'subscribe to our newsletter' verbiage

--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -27,7 +27,7 @@
 			class="footer-section__social-link newsletter"
 			href="/news"
 			title="CCA Libraries' news"
-		>Check out our newsletter</a>
+		>Subscribe to our newsletter</a>
 		<a
 			class="footer-section__social-link koha button"
 			href="/news"
