--- a/libraries/libraries/static/scss/components/home/_home-hero.scss
+++ b/libraries/libraries/static/scss/components/home/_home-hero.scss
@@ -7,16 +7,16 @@
   background-image: url('/images/home-hero-bg.png');
   background-position: top center;
   background-size: cover;
-  margin: 0 0 15px;
+  margin: 0 0 $home-hero-default-bottom-margin;
   padding: 100px 0 30px;
   position: relative;
 
   @include respond($break-medium) {
-    margin: 0 0 30px;
+    margin: 0 0 $home-hero-medium-bottom-margin;
   }
 
   @include respond($break-large) {
-    margin: 0 0 50px;
+    margin: 0 0 $home-hero-large-bottom-margin;
   }
 }
 
