scss - fixed empty space in pull qoute, ref #27

--- a/libraries/categories/templates/categories/blocks/quote.html
+++ b/libraries/categories/templates/categories/blocks/quote.html
@@ -1,7 +1,5 @@
 <blockquote class="blog-post__quote">
-    <p class="blog-post__quote-text blog-post__quote-text--quotemark">
-        {{ value.quote }}
-    </p>
+    <p class="blog-post__quote-text blog-post__quote-text--quotemark">{{ value.quote }}</p>
     {% if value.name or value.position %}
         <footer>
             {% if value.name %}
