footer - fix link URLs

--- a/libraries/libraries/templates/components/footer/footer-info.html
+++ b/libraries/libraries/templates/components/footer/footer-info.html
@@ -25,12 +25,12 @@
 		>Libraries' news</a>
 		<a
 			class="footer-section__social-link newsletter"
-			href="/news"
+			href="http://eepurl.com/cmyLt9"
 			title="CCA Libraries' news"
 		>Subscribe to our newsletter</a>
 		<a
 			class="footer-section__social-link koha button"
-			href="/news"
+			href="https://library.cca.edu/cgi-bin/koha/opac-user.pl"
 			title="CCA Libraries' news"
 		>Sign into your library account</a>
 
