--- a/libraries/libraries/templates/components/footer/footer-sites.html
+++ b/libraries/libraries/templates/components/footer/footer-sites.html
@@ -17,6 +17,9 @@
 			<p class="footer-section__site-address">
 				<a href="tel:15105943658">510.594.3658</a>
 			</p>
+			<p class="footer-section__site-address js-meyer-hrs">
+				{# JS fills in hours here #}
+			</p>
 		</li>
 		<li class="footer-section__site">
 			<h5 class="footer-section__site-name">
@@ -30,6 +33,9 @@
 			</p>
 			<p class="footer-section__site-address">
 				<a href="tel:14157039574">415.703.9574</a>
+			</p>
+			<p class="footer-section__site-address js-simpson-hrs">
+				{# JS fills in hours here #}
 			</p>
 		</li>
 	</ul>
