--- a/libraries/libraries/templates/components/ga.html
+++ b/libraries/libraries/templates/components/ga.html
@@ -1,4 +1,5 @@
 {# google analytics tracking code, only included on production site #}
+{# @TODO getting to the point where this should be a separate, minified file #}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -6,4 +7,14 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
   ga('create', 'UA-18459158-1', 'auto');
   ga('send', 'pageview');
+  // track document downloads
+  Array.from(document.querySelectorAll('a[href^="/documents/"]')).forEach(function(a) {
+      a.addEventListener('click', function(ev){
+          var u = new URL(a.href.split('/'))
+            , path = u.pathname.split('/')
+            , id = path[2]
+            , name = path[3]
+          ga('send', 'event', 'download', id, name)
+      })
+  })
 </script>
