hours - reorder hours pg columns, ref #47

--- a/libraries/hours/templates/hours/hours_page.html
+++ b/libraries/hours/templates/hours/hours_page.html
@@ -18,52 +18,52 @@
             <thead>
                 <tr>
                     <th>Hours</th>
-                    <th>Simpson</th>
-                    <th>Meyer</th>
-                    <th>Materials</th>
+                    <th>Simpson (SF)</th>
+                    <th>Materials (SF)</th>
+                    <th>Meyer (Oak)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Monday</td>
                     <td>{{ hours.Simpson.mon|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.mon|default:"closed" }} </td>
-                    <td>{{ hours.Materials.mon|default:"closed" }} </td>
+                    <td>{{ hours.Materials.mon|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.mon|default:"closed" }}</td>
                 </tr>
                 <tr>
                     <td>Tuesday</td>
                     <td>{{ hours.Simpson.tue|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.tue|default:"closed" }} </td>
-                    <td>{{ hours.Materials.tue|default:"closed" }} </td>
+                    <td>{{ hours.Materials.tue|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.tue|default:"closed" }}</td>
                 <tr>
                     <td>Wednesday</td>
                     <td>{{ hours.Simpson.wed|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.wed|default:"closed" }} </td>
-                    <td>{{ hours.Materials.wed|default:"closed" }} </td>
+                    <td>{{ hours.Materials.wed|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.wed|default:"closed" }}</td>
                 </tr>
                 <tr>
                     <td>Thursday</td>
                     <td>{{ hours.Simpson.thu|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.thu|default:"closed" }} </td>
-                    <td>{{ hours.Materials.thu|default:"closed" }} </td>
+                    <td>{{ hours.Materials.thu|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.thu|default:"closed" }}</td>
                 </tr>
                 <tr>
                     <td>Friday</td>
                     <td>{{ hours.Simpson.fri|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.fri|default:"closed" }} </td>
-                    <td>{{ hours.Materials.fri|default:"closed" }} </td>
+                    <td>{{ hours.Materials.fri|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.fri|default:"closed" }}</td>
                 </tr>
                 <tr>
                     <td>Saturday</td>
                     <td>{{ hours.Simpson.sat|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.sat|default:"closed" }} </td>
-                    <td>{{ hours.Materials.sat|default:"closed" }} </td>
+                    <td>{{ hours.Materials.sat|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.sat|default:"closed" }}</td>
                 </tr>
                 <tr>
                     <td>Sunday</td>
                     <td>{{ hours.Simpson.sun|default:"closed" }}</td>
-                    <td>{{ hours.Meyer.sun|default:"closed" }} </td>
-                    <td>{{ hours.Materials.sun|default:"closed" }} </td>
+                    <td>{{ hours.Materials.sun|default:"closed" }}</td>
+                    <td>{{ hours.Meyer.sun|default:"closed" }}</td>
                 </tr>
             </tbody>
         </table>
