scss - rowcomp images take up full width ref #46

--- a/libraries/libraries/static/scss/components/services/_service-row-item.scss
+++ b/libraries/libraries/static/scss/components/services/_service-row-item.scss
@@ -78,8 +78,9 @@
     margin: 0 0 15px;
   }
 
+  // take up full width available
   .service-row-item__image-wrapper--large {
-    flex: 0 1 75%;
+    flex: 0 1 100%;
     margin: 0 0 15px;
   }
 
