cats - widen rowcomp images ref #46

--- a/libraries/categories/templates/categories/row-item.html
+++ b/libraries/categories/templates/categories/row-item.html
@@ -34,7 +34,7 @@
 		{# no name/position beside it so display a larger image #}
 		<div class="service-row-item__image-wrapper--large">
 			<a href="{% pageurl item %}">
-				{% image item.specific.main_image width-180 class="service-row-item__image" %}
+				{% image item.specific.main_image fill-460x230 class="service-row-item__image" %}
 			</a>
 		</div>
 	{% endif %}
