fix analytics showing on dev site

--- a/libraries/libraries/templates/base.html
+++ b/libraries/libraries/templates/base.html
@@ -62,7 +62,7 @@
         <script type="text/javascript" src="{% static 'js/main.min.js' %}"></script>
 
         {# analytics if we're on production site #}
-        {% if not debug %}
+        {% if not request.is_preview and request.META.HTTP_HOST != "127.0.0.1:8000" and request.META.HTTP_HOST != "libraries-dev.cca.edu" %}
             {% include 'components/ga.html' %}
         {% endif %}
 
