--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -12,6 +12,7 @@
 // Utilities
 @import 'utilities/respond';
 @import 'utilities/clearfix';
+@import 'utilities/text';
 
 // Reset
 @import 'reset/reset';
