--- a/libraries/libraries/static/scss/components/footer/_footer-section.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer-section.scss
@@ -46,6 +46,7 @@
     order: 3;
 
     .footer-section__title {
+      margin: 0;
       flex: 0 0 100%;
     }
   }
@@ -112,6 +113,8 @@
   }
 
   .footer-section__links {
+    margin-left: -10px;
+
     @include respond($break-medium) {
       flex: 1 0 50%;
     }
@@ -130,6 +133,12 @@
       color: transparent;
       display: inline-block;
       font-size: 0;
+    }
+
+    .footer-section__social-link.koha.button {
+      display: table;
+      margin-bottom: 10px;
+      margin-left: 7px;
     }
 
     .footer-section__social-link:hover {
