--- a/libraries/categories/templates/categories/blocks/subheading.html
+++ b/libraries/categories/templates/categories/blocks/subheading.html
@@ -1,1 +1,2 @@
-<h2 class="blog-post__subtitle">{{ value }}</h2>
+{% load wagtailcore_tags %}
+<h2 class="blog-post__subtitle" id="{{ value|slugify }}">{{ value }}</h2>
