cats - new anchor style to account for fixed header

--- a/libraries/libraries/static/scss/main.scss
+++ b/libraries/libraries/static/scss/main.scss
@@ -68,6 +68,7 @@
 @import 'bootstrap/tables';
 
 // -- Misc
+@import 'components/misc/anchor';
 @import 'components/misc/breadcrumb';
 @import 'components/misc/link';
 @import 'components/misc/page';
