--- a/libraries/categories/templates/categories/special-collection.html
+++ b/libraries/categories/templates/categories/special-collection.html
@@ -1,6 +1,7 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<li class="collection js-collection-item" id="{{collection.title|slugify}}">
+<li class="collection js-collection-item">
+	<a class="anchor" id="{{collection.title|slugify}}"></a>
 	{# store image object so we can get its URL later #}
 	{% image collection.image fill-910x400 as img %}
 	<div
