reduce static file redirects
refer to actual /static/ django URLs in CSS & templates

--- a/libraries/libraries/static/scss/components/blog/_blog-articles-toggle.scss
+++ b/libraries/libraries/static/scss/components/blog/_blog-articles-toggle.scss
@@ -23,7 +23,7 @@
 }
 
 .blog-articles-toggle::after {
-  background-image: url('/images/chevron.png');
+  background-image: url('/static/images/chevron.png');
   background-size: 13px 8px;
   content: '';
   height: 8px;
