--- a/libraries/libraries/static/scss/components/footer/_footer-section.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer-section.scss
@@ -156,16 +156,16 @@
     }
 
     .footer-section__social-link.facebook::before {
-      background-image: url('/images/facebook-icon.png');
+      background-image: url('/static/images/facebook-icon.png');
       top: 3px;
     }
 
     .footer-section__social-link.instagram::before {
-      background-image: url('/images/instagram-icon.png');
+      background-image: url('/static/images/instagram-icon.png');
       top: 4px;
     }
 
     .footer-section__social-link.twitter::before {
-      background-image: url('/images/twitter-icon.png');
+      background-image: url('/static/images/twitter-icon.png');
       top: 5px;
     }
