--- a/libraries/libraries/static/scss/components/home/_home-hero.scss
+++ b/libraries/libraries/static/scss/components/home/_home-hero.scss
@@ -4,7 +4,7 @@
 // ===================================
 
 .home-hero {
-  background-image: url('/images/home-hero-bg.png');
+  background-image: url('/static/images/home-hero-bg.png');
   background-position: top center;
   background-size: cover;
   margin: 0 0 $home-hero-default-bottom-margin;
