--- a/libraries/libraries/static/scss/components/home/_home-info-box-times.scss
+++ b/libraries/libraries/static/scss/components/home/_home-info-box-times.scss
@@ -31,7 +31,7 @@
   }
 
   .home-info-box-times__title::before {
-    background-image: url('/images/clock-icon.png');
+    background-image: url('/static/images/clock-icon.png');
     background-size: 25px 25px;
     content: '';
     display: inline-block;
