--- a/libraries/libraries/static/scss/components/search/_search-input.scss
+++ b/libraries/libraries/static/scss/components/search/_search-input.scss
@@ -34,7 +34,7 @@
   }
 
   .search-input__submit::after {
-    background-image: url('/images/search-icon.png');
+    background-image: url('/static/images/search-icon.png');
     background-repeat: no-repeat;
     background-size: 33px 33px;
     content: '';
