libraries - title for 404 page

--- a/libraries/libraries/templates/404.html
+++ b/libraries/libraries/templates/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load search404_tags %}
 
+{% block title %}Page Not Found{% endblock %}
 {% block body_class %}page--404{% endblock %}
 
 {% block content %}
