--- a/libraries/categories/templates/categories/special_collections_page.html
+++ b/libraries/categories/templates/categories/special_collections_page.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div class="wrapper wrapper--padding-top">
-        <h1 class="collections-title">
+        <h1 class="collections-title js-collections-title">
             {{ page.title }}
         </h1>
     </div>
@@ -24,18 +24,4 @@
         </ul>
     </div>
 
-{% endblock %}
-
-{% block extra_js %}
-<script>
-(function() {
-    // fix long menus bleeding under the footer as you scroll down
-    let num_menu_items = $('.collections-nav-item').length
-    if (num_menu_items) {
-        // menu items are 49px high & 5 fit, the rest overflow
-        let margin = (num_menu_items - 5) * 49
-        if (margin > 0) $('.collections-list').css('margin-bottom', margin + 'px')
-    }
-})()
-</script>
 {% endblock %}
