--- a/libraries/categories/templates/categories/service_page.html
+++ b/libraries/categories/templates/categories/service_page.html
@@ -23,6 +23,20 @@
 				{% if page.specific.main_image %}
                     {% image page.specific.main_image width-404 class="about-us-image" %}
 				{% endif %}
+
+				{% if page.specific.display_staff_card %}
+					<div class="about-us-staff-card">
+						{% with page.staff as person %}
+							<div class="about-us-text">
+								{% image person.main_image fill-150x150 %}
+
+								<h2>{{ person.name }}</h2>
+
+								<p>{{ person.position }}<br>{{ person.email }}{% if person.phone %} | {{ person.phone }}{% endif %}</p><br>
+							</div>
+						{% endwith %}
+					</div>
+				{% endif %}
 			</div>
 
 			<article class="about-us-text-wrapper">
