--- a/libraries/categories/templates/categories/about_us_page.html
+++ b/libraries/categories/templates/categories/about_us_page.html
@@ -16,9 +16,13 @@
 			{{ page.title }}
 		</h1>
 		<div class="about-us-content">
-            {% if page.specific.main_image %}
+            {% if page.specific.main_image or page.specific.display_staff_card %}
     			<div class="about-us-image-wrapper">
                     {% image page.specific.main_image width-404 class="about-us-image" %}
+
+                    {% if page.specific.display_staff_card %}
+    					{% include 'categories/staff_card.html' with person=page.staff %}
+    				{% endif %}
     			</div>
             {% endif %}
 
