--- a/libraries/libraries/static/scss/reset/_reset.scss
+++ b/libraries/libraries/static/scss/reset/_reset.scss
@@ -57,3 +57,25 @@ strong, b {
 em, i {
 	font-style: italic;
 }
+
+// Taken from Bootstrap's normalize which is below
+// normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css
+//
+// Prevent `sub` and `sup` affecting `line-height` in all browsers.
+//
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
