exhib - fix header typo

--- a/libraries/exhibitions/templates/components/header.html
+++ b/libraries/exhibitions/templates/components/header.html
@@ -19,7 +19,7 @@
         	<li class="main-navigation__item">
         		<a
         			class="main-navigation__link"
-        			href="/exibitions"
+        			href="/exhibitions"
         			title="Exhibitions"
         		>
         			Exhibitions
