--- a/libraries/exhibitions/templates/exhibitions/exhibit_page.html
+++ b/libraries/exhibitions/templates/exhibitions/exhibit_page.html
@@ -6,15 +6,12 @@
 {% block content %}
 
 <div class="wrapper">
-    <h1>{{ page.title }}</h1>
-
-    <p><b>Template</b>: {{ page.display_template }}</p>
-
-    <div>
-        {% for header in page.header_image.all %}
-            <p>{% image header.image width-640 %}</p>
-        {% endfor %}
-    </div>
+    {% comment %} two templates: one large banner image or four square images {% endcomment %}
+    {% if page.display_template == 'banner' %}
+        {% include 'components/banner.html' %}
+    {% elif page.display_template == 'foursquare' %}
+        {% include 'components/foursquare.html' %}
+    {% endif %}
 
     <p>{{ page.location|richtext }}</p>
     <p>{{ page.dates|richtext }}</p>
@@ -24,16 +21,7 @@
     {% include_block page.description %}
 
     {% for work in page.exhibit_artwork.all %}
-        <div>
-            <p>Title: {{ work.title }} </p>
-            <p>Type: {{ work.type }} </p>
-            <p>Creator: {{ work.creator }} </p>
-            <p>Link: {{ work.link }} </p>
-            <p>Image: {% image work.image width-200 %} </p>
-            <p>Embed code: {{ work.embed_code|richtext }}</p>
-            <p>Description: {{ work.description|richtext }}</p>
-        </div>
-        <hr>
+        {% include 'components/artwork.html' %}
     {% endfor %}
 
     <section>
