--- a/libraries/libraries/static/scss/components/exhibits/_page.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_page.scss
@@ -4,7 +4,7 @@
 // ===================================
 .page {
   background: $white;
-  font-family: $font-family-sans-serif;
+  font-family: $font-family-serif;
   font-smoothing: antialiased;
   min-width: 360px;
   text-rendering: optimizeLegibility;
