--- a/libraries/libraries/static/scss/exhibits.scss
+++ b/libraries/libraries/static/scss/exhibits.scss
@@ -25,6 +25,7 @@
 // Reset
 @import 'reset/reset';
 @import 'reset/box-sizing';
+@import 'bootstrap/mixins';
 
 // -- Footer
 @import 'components/footer/footer-section';
