--- a/libraries/libraries/static/scss/components/exhibits/_gallery.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_gallery.scss
@@ -2,3 +2,31 @@
 // Works gallery
 // laid out with masonry
 // ===================================
+img {
+    @include img-responsive;
+}
+
+.gallery {
+    border-top: 1px solid $black;
+}
+
+.gallery--title {
+    font-family: $font-family-sans-serif;
+    font-size: 200%;
+    font-weight: 700;
+    margin: 40px 0 30px;
+}
+
+.gallery--work__responsibility {
+    line-height: 1.45;
+    margin: 1em 0 3em;
+
+    @include respond($break-medium) {
+      display: none;
+    }
+}
+
+.gallery--work__title {
+    font-size: 16px;
+    font-weight: 700;
+}
