--- a/libraries/libraries/static/scss/components/exhibits/_template.scss
+++ b/libraries/libraries/static/scss/components/exhibits/_template.scss
@@ -2,3 +2,6 @@
 // The two different exhibit template styles
 // fourquare vs. one large image
 // ===================================
+img {
+    @include img-responsive;
+}
